--- a/index.html
+++ b/index.html
@@ -5,23 +5,7 @@
     </head>
     <body>
 
-<script src="ruffle/ruffle.js"></script>
-    <script>
-        window.RufflePlayer = window.RufflePlayer || {};
-        window.addEventListener("load", (event) => {
-            const ruffle = window.RufflePlayer.newest();
-            const player = ruffle.createPlayer();
-            const container = document.getElementById("container"); 
-            container.appendChild(player);
-            player.load({
-                url: "game.swf", 
-                backgroundColor: "#000", 
-             });
-
-        });
-    </script>
-
-		<center><h1>Welcome To Softys AWS Page</h1></center>
+		<center><h1>Welcome To The Femboys.cf Page</h1></center>
         <h2>This page is currently blank just because im still testing this!</h2>
 
 		<div id="GETS">
@@ -58,7 +42,5 @@
             }
 
 		</script>
-        <br>
-        <div id="container"> </div>
 	</body>
 </html>
